# Proiect-OOP-2025

./: CMakeLists.txt  Enemy.h  Entity.h  Player.cpp  Texture.cpp  Texture.h  main.cpp  readme.md
src/: Ecran.cpp  Ecran.h  Enemy.cpp  Player.h
